Update src/posts/2025-05-16-test-2.md (via Pages CMS)

--- a/src/posts/2025-05-16-test-2.md
+++ b/src/posts/2025-05-16-test-2.md
@@ -5,3 +5,10 @@ title: test 2
 layout: post.njk
 ---
 test 2
+
+# This is a header 1
+
+1.  This is a numbered list
+    
+
+![](/media/1D671ABC-993F-4340-8221-5EACD0A8DF7E_1_201_a.jpeg)
